# corewar

./: .gitignore  CMakeLists.txt  Makefile  Makefile_Ann  asm  author  corewar
disasm/: CMakeLists.txt
disasm/includes/: disasm.h  op.h  op2.h
disasm/src/: disasm.c  main.c  utils.c
include/: aop.h  asm.h  cop.h  corewar.h  op.h  op_ann.h  opc.h  utils.h
libft/: Makefile  exit_with_error.c  ft_delcontent.c  ft_freesplit.c  ft_isempty.c  ft_isspace.c  ft_lltoa_base.c  ft_lstappend.c  ft_min.c  ft_pf_tools.c  ft_putstr_ptr_fd.c  ft_strch.c  ft_strjoin_free_second.c  ft_strjoinfree.c  ft_strsplit.c  ft_ulltoa_base.c  libft.h
src/asm/: analize_lex.c  analize_order.c  convert.c  convert_token.c  error_manager.c  free_things.c  header_pars.c  init_info.c  main.c  op.c  operation.c  reading_proc.c  split_tok.c  utils.c  utils2.c  utils3.c  verify_things.c
src/corewar/: add.c  aff.c  and.c  arena.c  args.c  carriage.c  carriege.c  champ_op.c  check_op.c  cop.c  display_arena.c  end_cw.c  finish.c  fork.c  game.c  init_cw.c  init_data.c  init_game.c  init_players.c  init_session.c  int_utils.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  main.c  op.c  op_add.c  op_aff.c  op_and.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  (+19 more)
src/corewar/champ_ops/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  ops_array.c  st.c  sub.c
src/disasm/: Makefile
src/disasm/include/: disasm.h  op.h  utils.h
src/disasm/src/: disasm.c  main.c  utils.c
tests/ts/: result
tests/ts/0_0_bad_files/: 07_too_long_comment.s
tests/ts/8_good/: 17_Survivor orig.cor  58_fluttershy our.cor
ts/: asm  check
ts/8_good/: 00_all_good_operations our.cor  09_lde our.cor  11_mat our.cor  19_Varimathras our.cor  resull
